<resources>
    <string name="app_name">Smart Wallpapers</string>
    <string name="action_settings">Settings</string>
    <string name="action_rating">Rate Us</string>
    <string name="action_about">About</string>
    <string name="action_set_as_wallpaper">Set As Wallpaper</string>
    <string name="action_download">Download</string>
    <string name="action_share">Share</string>
    <string name="action_report">Report</string>

    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_drawer_recently_added">Recently Added</string>
    <string name="toast_saved">Wallpapaer saved to #</string>
    <string name="toast_saved_failed">Sorry! Failed to save wallpaper</string>
    <string name="toast_wallpaper_set">Wallpapaer updated!</string>
    <string name="toast_wallpaper_set_failed">Sorry! Unable to set wallpapaer</string>
    <string name="splash_error">Unable to download wallpapers. Verify your google\'s user name in settings or device doesn\'t have internet connection!</string>
    <string name="set_wallpaper">Set as</string>
    <string name="download_wallpaper">Download</string>
    <string name="msg_unknown_error">Sorry! Unknown error occurred.</string>
    <string name="msg_wall_fetch_error">Sorry! Unable to fetch wallpaper(s). Verify app settings or device doesn\'t have internet connection.</string>
    <string name="internet_problem">Ooooooopppsss...!! Please \ncheck your internet connection.</string>
    <string name="toast_enter_google_username">Please enter google username</string>
    <string name="toast_enter_valid_grid_columns">Please enter valid number of columns</string>
    <string name="toast_enter_gallery_name">Please enter gallery directory name</string>
    <string name="lbl_google_username">Google username</string>
    <string name="lbl_no_grid_columns">Number of grid columns</string>
    <string name="lbl_gallery_name">Gallery directory name</string>
    <string name="lbl_btn_save">Save</string>
    <string name="lbl_btn_clear_cache">Clear Cache</string>
    <string name="lbl_btn_cache_size">Show Cache Size</string>
    <string name="banner_ad_unit_id">ca-app-pub-9971154848057782/9284822155</string>

</resources>
