<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.nuhin13.appwallpapers.FullScreenViewActivity">
    <item
        android:id="@+id/action_set_as_wallpaper"
        android:orderInCategory="100"
        android:title="@string/action_set_as_wallpaper"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_download"
        android:orderInCategory="102"
        android:title="@string/action_download"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="103"
        android:title="@string/action_share"
        app:showAsAction="never"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider" />
  <!--  <item
        android:id="@+id/action_report"
        android:orderInCategory="104"
        android:title="@string/action_report"
        app:showAsAction="never" /> -->
</menu>
